--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
 		}
 	},
 	"require": {
-		"webvimark/components": "dev-master"
+		"webvimark/components": "dev-master",
+		"webvimark/grid-bulk-actions": "*",
+		"webvimark/grid-page-size": "*"
 	}
 }
